syntax = "proto3";

package io.harness.pms.plan;

option java_multiple_files = true;

import "io/harness/pms/plan/plan_node.proto";

message Plan {
  string startingNodeId = 1;
  repeated PlanNode nodes = 2;
}
