syntax = "proto3";

package io.harness.pms.advisers;

option java_multiple_files = true;

message AdviserObtainment {
  AdviserType type = 1;
  bytes parameters = 2;
}

message AdviserType {
  string type = 1;
}