syntax = "proto3";

package io.harness.pms.execution;

option java_multiple_files = true;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/any.proto";

import "io/harness/pms/ambiance/ambiance.proto";
import "io/harness/pms/plan/plan_node.proto";
import "io/harness/pms/execution/execution_mode.proto";
import "io/harness/pms/execution/failure/failure_info.proto";
import "io/harness/pms/execution/status.proto";
import "io/harness/pms/data/step_outcome_ref.proto";

message NodeExecution {
  string uuid = 1;
  io.harness.pms.ambiance.Ambiance ambiance = 2;
  io.harness.pms.plan.PlanNode planNode = 3;
  ExecutionMode mode = 4;

  google.protobuf.Timestamp startTs = 5;
  google.protobuf.Timestamp endTs = 6;
  google.protobuf.Duration initialWaitDuration = 7;

  bytes resolvedStepParameters = 8;

  string notifyId = 9;

  string parentId = 10;
  string nextId = 11;
  string previousId = 12;

  Status status = 13;

  repeated google.protobuf.Any executableResponses = 14;
  repeated google.protobuf.Any additionalInputs = 15;
  repeated io.harness.pms.data.StepOutcomeRef outcomeRefs = 16;

  io.harness.pms.execution.failure.FailureInfo failureInfo = 17;

  // Missing Fields which needs to be added
  // Interrupt Effect
  // Retry Information
  // Timeout Information
}